[package]
name = "blueprint-metadata"
version = "0.1.0"
description = "A build dependency for generating metadata for Blueprint at compile time."
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typed-builder = { workspace = true }
gadget-blueprint-proc-macro-core = { workspace = true }
serde_json = { workspace = true }
rustdoc-types = { workspace = true }
cargo_metadata = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
