[package]
name = "gadget-blueprint-serde"
version = "0.2.0"
description = "Tangle Blueprints serde integration"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
paste.workspace = true
serde.workspace = true
serde_bytes = { workspace = true, features = ["alloc"] }
tangle-subxt.workspace = true

[dev-dependencies]
serde_test.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_bytes/std"
]
