[package]
name = "blueprint-test-utils"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["sp-core/std", "sp-application-crypto/std", "gadget-io/std", "gadget-sdk/std"]
wasm = ["gadget-io/wasm-bindgen", "gadget-sdk/wasm"]

[dependencies]
blueprint-manager = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
sp-io = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
libp2p = { workspace = true, default-features = false }
log = { workspace = true }
async-trait = { workspace = true }
gadget-io = { workspace = true, default-features = false }
gadget-sdk = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
subxt = { workspace = true, features = ["substrate-compat"] }
color-eyre = { workspace = true }
tracing = { workspace = true }
alloy-provider = { workspace = true, features = ["hyper"] }
alloy-rpc-types = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-transport = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-node-bindings = { workspace = true }
thiserror = { workspace = true }

eigensdk = { workspace = true }
testcontainers = { workspace = true }

url = { workspace = true }
cargo-tangle = { workspace = true, default-features = true }
serde_json = "1.0.128"
tokio-util = "0.7.12"

[dev-dependencies]
cargo_metadata = { workspace = true }
