[package]
name = "blueprint-test-utils"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["sp-core/std", "gadget-io/std", "gadget-sdk/std"]
wasm = ["gadget-io/wasm-bindgen", "gadget-sdk/wasm"]

[dependencies]
# Core dependencies
async-trait = { workspace = true }
blueprint-manager = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Logging and error handling
color-eyre = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Substrate
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
subxt = { workspace = true, features = ["substrate-compat"] }

# Networking
libp2p = { workspace = true, default-features = false }
url = { workspace = true }

# Gadget and SDKs
cargo-tangle = { workspace = true, default-features = true }
gadget-io = { workspace = true, default-features = false }
gadget-sdk = { workspace = true }
incredible-squaring-aggregator = { workspace = true }

# Alloy-related
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, features = ["hyper"] }
alloy-rpc-types-eth = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }

# Utility
testcontainers = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
cargo_metadata = { workspace = true }
