[package]
name = "cargo-tangle"
version = "0.1.0"
description = "A command-line tool to create and deploy blueprints on Tangle Network"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Core CLI dependencies - always included
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
clap-cargo = { workspace = true, features = ["clap"] }
cargo-generate = { workspace = true, features = ["vendored-openssl", "vendored-libgit2"] }
cargo_metadata = { workspace = true }
escargot = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }
color-eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
tracing = { workspace = true, features = ["log"] }
thiserror = { workspace = true }
bip39 = { workspace = true, features = ["rand_core", "rand"] }
dotenv = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }

# Gadget dependencies
gadget-blueprint-proc-macro-core = { workspace = true, default-features = true }
gadget-std = { workspace = true, features = ["std"] }
gadget-logging = { workspace = true, default-features = true }
gadget-utils-tangle = { workspace = true, default-features = true }
gadget-config = { workspace = true, features = ["std", "networking"] }
dialoguer = { workspace = true, default-features = true }

# Optional client dependencies
gadget-clients = { workspace = true, optional = true }
gadget-crypto = { workspace = true, features = [
    "k256",
    "sr25519-schnorrkel",
    "ed25519",
    "bls",
    "bn254",
    "sp-core",
    "sp-core-bls",
    "tangle-pair-signer",
] }
gadget-crypto-core = { workspace = true, features = ["clap"] }
gadget-keystore = { workspace = true }

# Optional crypto dependencies
tnt-bls = { workspace = true, optional = true }

# Optional dependencies based on features
tangle-subxt = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }

# EVM dependencies
alloy-json-abi = { workspace = true, optional = true, features = ["serde_json"] }
alloy-provider = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-transport = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }

[dev-dependencies]
gadget-keystore = { workspace = true, features = ["bn254"] }
tempfile = { workspace = true }
gadget-testing-utils = { workspace = true, features = ["anvil", "eigenlayer"] }
gadget-utils = { workspace = true, features = ["std", "evm", "eigenlayer"] }
alloy-contract = { workspace = true }
alloy-dyn-abi = { workspace = true }

[features]
default = ["std", "tangle", "eigenlayer"]
std = [
    "gadget-blueprint-proc-macro-core/std",
    "gadget-clients/std",
    "gadget-keystore/std",
    "gadget-logging/std",
    "gadget-std/std",
    "gadget-utils-tangle/std",
    "tangle-subxt/std",
]

# Main features
tangle = [
    "dep:tangle-subxt",
    "dep:sp-core",
    "gadget-clients/tangle",
    "gadget-keystore/tangle-full",
    "evm",
]

# Protocol features
eigenlayer = [
    "gadget-clients/eigenlayer",
    "gadget-keystore/eigenlayer-full",
    "evm",
]

# Core functionality features
evm = [
    "alloy-json-abi",
    "alloy-provider",
    "alloy-network",
    "alloy-rpc-types-eth",
    "alloy-signer-local",
    "alloy-transport",
    "alloy-primitives",
]
