[package]
name = "cargo-tangle"
version = "0.1.0"
description = "A command-line tool to create and deploy blueprints on Tangle Network"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Core CLI dependencies - always included
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
clap-cargo = { workspace = true, features = ["clap"] }
cargo-generate = { workspace = true, features = ["vendored-libgit2"] }
cargo_metadata = { workspace = true }
escargot = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }
color-eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
tracing = { workspace = true, features = ["log"] }
thiserror = { workspace = true }
bip39 = { workspace = true, features = ["rand_core", "rand"] }
dotenv = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }

# Blueprint dependencies
blueprint-runner = { workspace = true, features = ["networking"] }
gadget-std = { workspace = true }
gadget-logging = { workspace = true, default-features = true }
blueprint-tangle-extra = { workspace = true, default-features = true }
gadget-chain-setup = { workspace = true, features = ["tangle", "anvil"] }
gadget-blueprint-serde = { workspace = true, optional = true }
blueprint-manager = { workspace = true }
dialoguer = { workspace = true, default-features = true }

# Optional client dependencies
gadget-clients = { workspace = true, optional = false }
gadget-crypto = { workspace = true, features = [
    "k256",
    "sr25519-schnorrkel",
    "ed25519",
    "bls",
    "bn254",
    "sp-core",
    "sp-core-bls",
    "tangle-pair-signer",
] }
gadget-crypto-core = { workspace = true, features = ["clap"] }
gadget-keystore = { workspace = true }

# Optional crypto dependencies
tnt-bls = { workspace = true, optional = true }

# Optional dependencies based on features
tangle-subxt = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }
eigensdk = { workspace = true, optional = true }
blueprint-evm-extra = { workspace = true, optional = true }

# Anvil dependencies
testcontainers = { workspace = true, optional = true }
tempfile = { workspace = true }

# EVM dependencies
alloy-json-abi = { workspace = true, optional = true, features = ["serde_json"] }
alloy-network = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }
alloy-contract = { workspace = true, optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-transport = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }

[dev-dependencies]
gadget-keystore = { workspace = true, features = ["bn254"] }
tempfile = { workspace = true }
gadget-testing-utils = { workspace = true, features = ["anvil", "eigenlayer", "tangle"] }
alloy-contract = { workspace = true }
alloy-dyn-abi = { workspace = true }

[features]
default = ["std", "tangle", "eigenlayer"]
std = [
    "gadget-std/std",
    "gadget-chain-setup/std",
    "gadget-clients/std",
    "gadget-keystore/std",
    "gadget-logging/std",
    "gadget-std/std",
    "blueprint-tangle-extra/std",
    "tangle-subxt/std",
    "blueprint-runner/std",
]

# Main features
tangle = [
    "dep:tangle-subxt",
    "dep:sp-core",
    "gadget-clients/tangle",
    "gadget-keystore/tangle-full",
    "gadget-blueprint-serde",
    "blueprint-runner/tangle",
    "evm",
]

# Protocol features
eigenlayer = [
    "gadget-clients/eigenlayer",
    "gadget-keystore/eigenlayer-full",
    "blueprint-runner/eigenlayer",
    "eigensdk",
    "evm",
]

# Core functionality features
evm = [
    "dep:alloy-json-abi",
    "dep:alloy-primitives",
    "dep:alloy-contract",
    "dep:alloy-network",
    "dep:alloy-signer-local",
    "dep:alloy-provider",
    "dep:alloy-transport",
    "dep:alloy-rpc-types-eth",
    "dep:testcontainers",
    "dep:blueprint-evm-extra",
    "gadget-keystore/evm",
    "gadget-clients/evm",
]
