[package]
name = "cargo-tangle"
version = "0.1.0"
description = "A command-line tool to create and deploy blueprints on Tangle Network"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
clap-cargo = { workspace = true, features = ["clap"] }
cargo-generate = { workspace = true, features = ["vendored-libgit2"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }
color-eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
tracing = { workspace = true, features = ["log"] }
thiserror = { workspace = true }
bip39 = { workspace = true, features = ["rand_core", "rand"] }
dotenv = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }
blueprint-core = { workspace = true, features = ["tracing"] }
blueprint-runner = { workspace = true, features = ["networking", "tangle", "eigenlayer"] }
gadget-std = { workspace = true, features = ["std"] }
blueprint-tangle-extra = { workspace = true, features = ["std"] }
gadget-chain-setup = { workspace = true, features = ["tangle", "anvil", "std"] }
gadget-testing-utils = { workspace = true, features = ["tangle", "anvil", "eigenlayer"] }
gadget-contexts = { workspace = true }
tnt-core-bytecode = { workspace = true }
gadget-blueprint-serde = { workspace = true }
blueprint-manager = { workspace = true }
dialoguer = { workspace = true, default-features = true }
gadget-clients = { workspace = true, features = ["tangle", "eigenlayer", "evm", "std"] }
gadget-crypto = { workspace = true, features = [
    "k256",
    "sr25519-schnorrkel",
    "ed25519",
    "bls",
    "bn254",
    "sp-core",
    "sp-core-bls",
    "tangle-pair-signer",
] }
gadget-crypto-core = { workspace = true, features = ["clap"] }
gadget-keystore = { workspace = true, features = ["tangle-full", "eigenlayer-full", "evm", "std"] }
tangle-subxt = { workspace = true }
sp-core = { workspace = true }
eigensdk = { workspace = true }
blueprint-evm-extra = { workspace = true }
testcontainers = { workspace = true }
tempfile = { workspace = true }
alloy-json-abi = { workspace = true, features = ["serde_json"] }
alloy-network = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true }
alloy-contract = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport = { workspace = true }
alloy-rpc-types-eth = { workspace = true }

[dev-dependencies]
gadget-keystore = { workspace = true, features = ["bn254"] }
tempfile = { workspace = true }
gadget-testing-utils = { workspace = true, features = ["anvil", "eigenlayer", "tangle"] }
alloy-contract = { workspace = true }
alloy-dyn-abi = { workspace = true }
