[package]
name = "gadget-common"
version = "0.1.0"
edition = "2021"

[dependencies]
libsecp256k1 = { version = "0.7" }
gadget-core = { workspace = true }
gadget-io = { workspace = true, default-features = false }
protocol-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prometheus = { workspace = true, default-features = false }
auto_impl = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
round-based = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"], optional = true }
lazy_static = { workspace = true }
getrandom = { workspace = true }
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false, features = ["alloc"] }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", default-features = false, features = ["alloc"] }
tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false, features = ["alloc"] }
color-eyre = { workspace = true }

# Substrate
tangle-subxt = { workspace = true, optional = true }
subxt-signer = { workspace = true, features = ["subxt", "sr25519"], optional = true }
subxt = { workspace = true, optional = true }
sp-api = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false, features = ["full_crypto"] }
sp-runtime = { workspace = true, default-features = false }
sp-tracing = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true}
substrate-prometheus-endpoint = { workspace = true, optional = true }

parity-scale-codec = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = ["substrate", "std", "tangle-testnet"]
tangle-testnet = []
tangle-mainnet = []
substrate = [
  "gadget-core/substrate",
  "gadget-io/default",
  "tangle-subxt",
  "subxt-signer",
  "subxt/native",
  "subxt/jsonrpsee",
  "substrate-prometheus-endpoint",
  "parity-scale-codec",
]
std = [
  "sqlx",
  "serde/std",
  "tracing/std",
  "tracing/attributes",
  "sp-api/std",
  "sp-io/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-tracing/std",
]
wasm = [
    "gadget-io/wasm",
    "serde/alloc",
    "serde/derive",
    "tracing/alloc",
    "getrandom/js",
    "gadget-core/substrate",
    "subxt-signer/web",
    "subxt/web",
    "subxt/jsonrpsee",
    "sp-io/disable_panic_handler",
    "sp-io/disable_oom",
    "sp-io/disable_allocator",
    "sp-runtime/serde",
    "parity-scale-codec",
]
testing = []

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
