[package]
name = "gadget-common"
version = "0.1.0"
edition = "2021"
description = "Common utilities for writing gadgets for Tangle blueprint"
homepage.workspace = true
license.workspace = true

[dependencies]
cfg-if = { workspace = true }
libsecp256k1 = { workspace = true }
gadget-core = { workspace = true }
gadget-io = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true }
prometheus = { workspace = true }
auto_impl = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
round-based = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"], optional = true }
lazy_static = { workspace = true }
getrandom = { workspace = true }
tracing = { workspace = true, default-features = false }
tracing-subscriber = { workspace = true, default-features = false }
tracing-core = { workspace = true, default-features = false }
color-eyre = { workspace = true }

# Substrate
tangle-subxt = { workspace = true, optional = true }
subxt-signer = { workspace = true, features = ["subxt", "sr25519"], optional = true }
subxt = { workspace = true, optional = true }
sp-io = { workspace = true, features = ["disable_allocator", "disable_panic_handler", "disable_oom"] }
sp-core = { workspace = true, features = ["full_crypto"] }
sp-runtime = { workspace = true, features = ["serde"] }
substrate-prometheus-endpoint = { workspace = true, optional = true }

parity-scale-codec = { workspace = true, optional = true }
thiserror = { workspace = true }

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["substrate", "std", "tangle-testnet", "subxt/native"]
tangle-testnet = []
tangle-mainnet = []
substrate = [
  "gadget-core/substrate",
  "tangle-subxt",
  "subxt-signer",
  "subxt/jsonrpsee",
  "substrate-prometheus-endpoint",
  "parity-scale-codec",
]
std = [
  "gadget-io/std",
  "gadget-core/std",
  "dep:sqlx",
  "serde/std",
  "tracing/std",
  "tracing/attributes",
  "sp-io/std",
  "sp-runtime/std",
]
wasm = [
    "subxt-signer/web",
    "subxt/web",
    "subxt/jsonrpsee",
    "parity-scale-codec",
]
testing = []
