[package]
name = "gadget-core"
version = "0.0.1"
authors = ["Webb Developers <hello@webb.tools>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Tangle's gadget core library for writing Tangle blueprints"
repository.workspace = true
homepage.workspace = true

[features]
default = ["substrate"]
substrate = []

[dependencies]
parking_lot = { workspace = true }
gadget-io = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
log = { workspace = true }
async-trait = { workspace = true }
auto_impl = { workspace = true }
futures = { workspace = true }
sp-core = { workspace = true }
futures-timer = "3.0.3"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
