[package]
name = "gadget-core"
version = "0.0.1"
authors = ["Webb Developers <hello@webb.tools>"]
license.workspace = true
edition = "2021"
description = "Tangle's gadget core library for writing Tangle blueprints"
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = { workspace = true }
auto_impl = { workspace = true }
futures-timer = { workspace = true }
gadget-io = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[features]
default = ["std", "substrate"]
substrate = []
std = [
    "gadget-io/std",
    "log/std",
    "serde/std",
    "sp-core/std",
]
