[package]
name = "eigen-gadget"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-contract.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-pubsub.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local = { workspace = true, features = ["keystore"] }
alloy-transport-http.workspace = true
alloy-transport-ws.workspace = true
alloy-transport.workspace = true
async-trait.workspace = true
aws-sdk-kms.workspace = true

eigen-contracts.workspace = true
eigen-utils.workspace = true
gadget-aws-kms.workspace = true
gadget-common = { workspace = true, default-features = false, features = ["default"] }
# gadget-common = { workspace = true, features = ["tangle-testnet"] }

foundry-common.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["full"] }
hex.workspace = true
k256.workspace = true
log.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
env_logger.workspace = true

[dev-dependencies]
anvil.workspace = true

tokio = { version = "1.38.0", features = ["full"] }
alloy = { version = "0.1.3", features = ["serde", "signers"] }
alloy-rpc-types-eth.workspace = true
alloy-rpc-client.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-contract.workspace = true
alloy-sol-types.workspace = true
alloy-signer-local.workspace = true
log.workspace = true
env_logger.workspace = true
getrandom.workspace = true
hex.workspace = true
lazy_static.workspace = true
url.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true