[package]
name = "gadget-executor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
failure = { workspace = true }
nix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }