[package]
name = "gadget-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "std"
]
std = [
    "sp-api/std",
    "tangle-primitives/std",
    "pallet-jobs-rpc-runtime-api/std"
]

[dependencies]
gadget-core = { workspace = true, features = ["substrate"] }
protocol-macros = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
auto_impl = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
sc-client-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
hex = { workspace = true }
bincode2 = { workspace = true }
linked-hash-map = { workspace = true }
subxt = { workspace = true, features = ["substrate-compat"] }
anyhow = { workspace = true }
futures = { workspace = true }
round-based = { workspace = true }
sp-api = { workspace = true }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }

frame-support = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }

tangle-primitives = { workspace = true, features = ["std"] }
pallet-jobs-rpc-runtime-api = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
