[package]
name = "gadget-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "std"
]
std = [
    "sp-api/std",
    "tangle-primitives/std",
    "pallet-jobs-rpc-runtime-api/std"
]
testnet = []
testing = []

[dependencies]
gadget-core = { workspace = true, features = ["substrate"] }
protocol-macros = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
auto_impl = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
sc-client-api = { workspace = true }
sc-service = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-application-crypto = { workspace = true }
hex = { workspace = true }
bincode2 = { workspace = true }
serde_bytes = { workspace = true }
linked-hash-map = { workspace = true }
webb = { workspace = true, default-features = false, features = ["substrate-runtime"] }
subxt-signer = { workspace = true, features = ["subxt", "sr25519"] }
anyhow = { workspace = true }
futures = { workspace = true }
round-based = { workspace = true }
sp-api = { workspace = true }
sp-io = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
substrate-prometheus-endpoint = { workspace = true }
lazy_static = { workspace = true }

frame-support = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }

tangle-primitives = { workspace = true, features = ["std"] }
pallet-jobs-rpc-runtime-api = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
# Just to get it to compile for now
ed448-goldilocks-plus = { git = "https://github.com/mikelodder7/Ed448-Goldilocks", features = ["std"] }
