[package]
name = "gadget-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gadget-core = { workspace = true }
protocol-macros = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
auto_impl = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
bincode2 = { workspace = true }
serde_bytes = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
round-based = { workspace = true }
round-based-21 = { workspace = true, features = ["derive"]}
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
lazy_static = { workspace = true }

# Substrate
webb = { workspace = true, default-features = false, features = ["substrate-runtime"], optional = true }
subxt-signer = { workspace = true, features = ["subxt", "sr25519"], optional = true }
sp-api = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }
sp-application-crypto = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sc-service = { workspace = true, optional = true }
sc-client-api = { workspace = true, optional = true }
sc-network = { workspace = true, optional = true }
sc-network-common = { workspace = true, optional = true }
sc-network-sync = { workspace = true, optional = true }
substrate-prometheus-endpoint = { workspace = true, optional = true }
frame-support = { workspace = true, optional = true }
linked-hash-map = { workspace = true, optional = true }

parity-scale-codec = { workspace = true, optional = true }
scale-info = { workspace = true, optional = true }


[features]
default = ["substrate"]
substrate = [
  "gadget-core/substrate",
  "webb",
  "subxt-signer",
  "sp-api",
  "sp-io",
  "sp-core",
  "sp-runtime",
  "sp-application-crypto",
  "sc-service",
  "sc-client-api",
  "sc-network",
  "sc-network-common",
  "sc-network-sync",
  "frame-support",
  "linked-hash-map",
  "substrate-prometheus-endpoint",
  "parity-scale-codec",
  "scale-info",
]
testing = []
